--- a/src/wangfuji/scss/index.scss
+++ b/src/wangfuji/scss/index.scss
@@ -222,6 +222,13 @@ img{
 							width: 3.6rem /* 90/25 */;
 							margin: 0 auto;
 						}
+						.canvas2{
+							position: absolute;
+							top: 0;
+							left: 0;
+							width: 100%;
+							height: 100%;
+						}
 					}
 					.fileUpload{
 						position: absolute;
@@ -240,6 +247,7 @@ img{
 					justify-content: center;
 					width: 1rem /* 25/25 */;
 					.btn{
+						pointer-events: auto;
 						width: 1rem /* 25/25 */;
 						&.shrink{
 							margin: .4rem /* 10/25 */ auto;
@@ -1584,10 +1592,16 @@ img{
 			width: 10.68rem /* 267/25 */;
 			margin: 0 auto;
 			.left{
+				display: flex;
+				align-items: center;
+				justify-content: center;
 				width: 3.4rem /* 85/25 */;
+				height: 4.96rem /* 124/25 */;
+				background: url(../images/bottle7.png) no-repeat center;
+				background-size: 3.4rem /* 85/25 */ 4.96rem /* 124/25 */;
 				img{
 					display: block;
-					width: 100%;
+					width: 1.28rem /* 32/25 */;
 				}
 			}
 			.right{
@@ -1723,14 +1737,39 @@ img{
 }
 // customized
 .customizedWrap{
-	.wrap{
+	position: relative;
+	.page2{
+		position: absolute;
+		top: 0;
+		left: 0;
+		z-index: -1;
+	}
+	.wrap1{
 		padding-left: 11.4%;
 		padding-right: 11.4%;
-		.bottle{
+		// .bottle{
+		// 	display: block;
+		// 	width: 4.44rem /* 111/25 */;
+		// 	margin: .6rem /* 15/25 */ auto 0;
+		// 	pointer-events: auto;
+		// }
+		.poster-head{
 			display: block;
+			width: 10rem /* 250/25 */;
+			margin: 0 auto;
+		}
+		.bottle{
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			width: 4.44rem /* 111/25 */;
-			margin: .6rem /* 15/25 */ auto 0;
-			pointer-events: auto;
+			height: 6.64rem /* 166/25 */;
+			margin: -1.6rem /* 40/25 */ auto 0;
+			background: url(../images/bottle8.png) no-repeat center;
+			background-size: 4.44rem /* 111/25 */ 6.64rem /* 166/25 */;
+			.person{
+				width: 1.8rem /* 45/25 */;
+			}
 		}
 		.tip{
 			margin-top: .8rem /* 20/25 */;
@@ -1746,6 +1785,8 @@ img{
 			color: #3f2c01;
 		}
 		.btnGo{
+			position: relative;
+			z-index: 100;
 			display: block;
 			width: 2.92rem /* 73/25 */;
 			margin: .64rem /* 16/25 */ auto 0;
@@ -1756,6 +1797,78 @@ img{
 				display: block;
 				width: 100%;
 			}
+		}
+	}
+	.wrap2{
+		// display: none;
+		padding-left: 11.4%;
+		padding-right: 11.4%;
+		.poster-head{
+			display: block;
+			width: 10rem /* 250/25 */;
+			margin: 0 auto;
+		}
+		// .bottle{
+		// 	display: block;
+		// 	width: 4.44rem /* 111/25 */;
+		// 	margin: -1.6rem /* 40/25 */ auto 0;
+		// }
+		.bottle{
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			width: 4.44rem /* 111/25 */;
+			height: 6.64rem /* 166/25 */;
+			margin: -1.6rem /* 40/25 */ auto 0;
+			background: url(../images/bottle8.png) no-repeat center;
+			background-size: 4.44rem /* 111/25 */ 6.64rem /* 166/25 */;
+			.person{
+				width: 1.8rem /* 45/25 */;
+			}
+		}
+		.rule-box{
+			width: 9.88rem /* 247/25 */;
+			margin: .8rem /* 20/25 */ auto 0;
+			p{
+				letter-spacing: 1px;
+				color: #3f2c01;
+			}
+			.caption{
+				margin-bottom: .4rem /* 10/25 */;
+				font-size: .56rem /* 14/25 */;
+			}
+			.rule{
+				line-height: .72rem /* 18/25 */;
+				font-size: .4rem /* 10/25 */;
+			}
+			.reward{
+				line-height: .64rem /* 16/25 */;
+				margin-top: .48rem /* 12/25 */;
+				font-size: .4rem /* 10/25 */;
+			}
+			.qrcode{
+				display: block;
+				width: 4.8rem /* 120/25 */;
+				margin: 1.72rem /* 43/25 */ auto 0;
+			}
+			.scanning{
+				margin-top: .4rem /* 10/25 */;
+				text-align: center;
+				font-size: .4rem /* 10/25 */;
+				color: #3f2c01;
+			}
+		}
+	}
+	.synthesis{
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: 2;
+		opacity: 0;
+		.result{
+			pointer-events: auto;
 		}
 	}
 }
