--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1546,15 +1546,13 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page0 .page0-07 { position: absolute; top: 25.5%; left: 50%; margin-left: -13.6%; width: 27.2%; opacity: 0; }
 
-.page1 { opacity: 0; }
+.page1 { display: block; opacity: 0; }
 
 .page1 .page1-00 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/02_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
 
-.page1 .page1-00 img { max-width: none; width: auto; height: 100%; }
-
 .page1 .page1-04 { position: absolute; top: 40.5%; left: 10.3%; width: 82.8%; }
 
-.page1 .page1-03 { position: absolute; bottom: 8.1%; left: 50%; width: 15.2%; margin-left: -7.6%; }
+.page1 .page1-03 { display: none; position: absolute; bottom: 8.1%; left: 50%; width: 15.2%; margin-left: -7.6%; }
 
 .page1 .page1-03 .wave1 { position: absolute; top: 0; left: 0; width: 100%; }
 
@@ -1584,21 +1582,43 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page1 .wheel.wheel2 { right: 12%; bottom: 8.5%; }
 
-.page2 .page2-01 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/02_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
+.page1 .page1-06 { position: absolute; top: 11.3%; left: 50%; width: 22.2%; margin-left: -11.1%; opacity: 0; }
 
-.page2 .page2-01 img { max-width: none; width: auto; height: 100%; }
+.page2 { display: block; opacity: 0; }
 
-.page2 .page2-04 { position: absolute; top: 40.5%; left: 10.3%; width: 82.8%; }
+.page2 .page2-01 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/04_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 100%; background-size: auto 100%; }
 
-.page2 .page2-02 { position: absolute; top: 38%; right: -9%; width: 45.9%; -webkit-animation: carLight 6s linear infinite forwards; animation: carLight 6s linear infinite forwards; }
+.page2 .page2-02 { position: absolute; top: 11.6%; left: 50%; width: 32.6%; margin-left: -16.3%; }
 
-.page2 .wheel { display: none; position: absolute; width: 11.5%; }
+.page3 { opacity: 0; display: block; }
 
-.page2 .wheel.active { display: block; -webkit-animation: rotating .6s linear infinite; animation: rotating .6s linear infinite; }
+.page3 .page3-01 { position: relative; }
 
-.page2 .wheel.wheel1 { left: 15.8%; bottom: 9.7%; }
+.page3 .page3-02 { position: absolute; top: 38.9%; right: 0%; width: 52%; }
 
-.page2 .wheel.wheel2 { right: 12.8%; bottom: 9.7%; }
+.page3 .page3-02 .page3-03 { position: absolute; top: 22%; left: 6%; width: 43.8%; -webkit-animation: carLight 6s linear infinite forwards; animation: carLight 6s linear infinite forwards; }
+
+.page3 .page3-04 { position: absolute; top: 16.6%; left: 50%; width: 38.7%; margin-left: -19.35%; }
+
+.page4 { display: block; opacity: 0; }
+
+.page4 .page4-02 { position: absolute; top: 42.6%; left: 68%; width: 68.9%; }
+
+.page4 .page4-03 { position: absolute; top: 14.5%; left: 50%; width: 33.5%; margin-left: -16.75%; }
+
+.page4 .page4-04 { position: absolute; bottom: 10%; left: 50%; width: 76.6%; margin-left: -38.3%; }
+
+.page5 { display: block; opacity: 0; }
+
+.page5 .page5-02 { position: absolute; top: 34.2%; left: 50%; width: 49.5%; margin-left: -24.75%; opacity: .5; }
+
+.page5 .page5-03 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); }
+
+.page5 .page5-04 { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%; font-size: 0.4rem; letter-spacing: 2px; color: #ffffff; }
+
+.page5 .page5-04 .word.word1 { margin-right: 0.8rem; }
+
+.page5 .page5-04 .word span { opacity: 0; }
 
 @-webkit-keyframes carLight { 0% { opacity: 0; }
   12% { opacity: 1; }
