--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1602,11 +1602,21 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page4 { display: block; opacity: 0; }
 
-.page4 .page4-02 { position: absolute; top: 42.6%; left: 68%; width: 68.9%; }
+.page4 .page4-02 { position: absolute; top: 42.6%; left: 100%; width: 68.9%; }
 
 .page4 .page4-03 { position: absolute; top: 14.5%; left: 50%; width: 33.5%; margin-left: -16.75%; }
 
 .page4 .page4-04 { position: absolute; bottom: 10%; left: 50%; width: 76.6%; margin-left: -38.3%; }
+
+.page4 .page5-02, .page4 .page4-05 { position: absolute; top: 34.2%; left: 50%; width: 49.5%; margin-left: -24.75%; opacity: 0; }
+
+.page4 .page5-03, .page4 .page4-06 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.6); }
+
+.page4 .page5-04, .page4 .page4-07 { display: -webkit-box; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-box-align: center; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; position: absolute; top: 0; left: 0; width: 100%; height: 100%; font-size: 0.4rem; letter-spacing: 2px; color: #ffffff; }
+
+.page4 .page5-04 .word.word1, .page4 .page4-07 .word.word1 { margin-right: 0.8rem; }
+
+.page4 .page5-04 .word span, .page4 .page4-07 .word span { opacity: 0; }
 
 .page5 { display: block; opacity: 0; }
 
