--- a/src/wangfuji/css/index.css
+++ b/src/wangfuji/css/index.css
@@ -1531,11 +1531,25 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .pageMask .close { position: fixed; top: 3.4rem; right: 1.2rem; width: 0.84rem; height: 1rem; background-image: url(../images/close.png); -webkit-background-size: 0.84rem 1rem; background-size: 0.84rem 1rem; background-repeat: no-repeat; background-position: center; }
 
-.pageMask .maskMenu li { width: 63.4%; margin: 0 auto 0.8rem; }
+.pageMask .maskMenu li { width: 63.4%; margin: 0 auto 0.8rem; -webkit-transform: translateX(-100%); -ms-transform: translateX(-100%); transform: translateX(-100%); opacity: 0; -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); }
 
 .pageMask .maskMenu li a { display: block; }
 
 .pageMask .maskMenu li a img { display: block; }
+
+.pageMask .maskMenu li.enter { -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); opacity: 1; }
+
+.pageMask .maskMenu li.leave { -webkit-transform: translateX(-100%); -ms-transform: translateX(-100%); transform: translateX(-100%); opacity: 0; }
+
+.pageMask .maskMenu li:nth-child(1) { -webkit-transition-delay: .14s; -o-transition-delay: .14s; transition-delay: .14s; }
+
+.pageMask .maskMenu li:nth-child(2) { -webkit-transition-delay: .1s; -o-transition-delay: .1s; transition-delay: .1s; }
+
+.pageMask .maskMenu li:nth-child(3) { -webkit-transition-delay: .0666666667s; -o-transition-delay: .0666666667s; transition-delay: .0666666667s; }
+
+.pageMask .maskMenu li:nth-child(4) { -webkit-transition-delay: 50ms; -o-transition-delay: 50ms; transition-delay: 50ms; }
+
+.pageMask .maskMenu li:nth-child(5) { -webkit-transition-delay: 40ms; -o-transition-delay: 40ms; transition-delay: 40ms; }
 
 .page { width: 100%; height: 30.96rem; padding-top: 4rem; background-image: url(../images/bg.jpg); -webkit-background-size: 100% 30.96rem; background-size: 100% 30.96rem; background-repeat: no-repeat; background-position: center; }
 
@@ -1547,9 +1561,15 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .loadingWrap .page0 .progress .percent { margin-right: 0.08rem; font-size: 0.72rem; }
 
+.loadingWrap .page1 { overflow-x: hidden; }
+
 .loadingWrap .page1 .page1-1 { display: block; margin: 0 auto; width: 49.8%; }
 
-.loadingWrap .page1 .links .link { display: block; }
+.loadingWrap .page1 .links .link { display: block; -webkit-transform: translateX(-100%); -ms-transform: translateX(-100%); transform: translateX(-100%); opacity: 0; -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); -webkit-transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); -o-transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); transition: transform 0.45s cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 0.45s cubic-bezier(0.4, 0, 0.2, 1); }
+
+.loadingWrap .page1 .links .link.link2 { -webkit-transform: translateX(100%); -ms-transform: translateX(100%); transform: translateX(100%); }
+
+.loadingWrap .page1 .links .link.enter { -webkit-transform: translateX(0); -ms-transform: translateX(0); transform: translateX(0); opacity: 1; }
 
 .loadingWrap .page1 .links .link .item { display: block; margin: 0 auto; }
 
@@ -1558,6 +1578,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .loadingWrap .page1 .links .link .item2 { width: 10.32rem; }
 
 .loadingWrap .page1 .links .link .item3 { width: 8.72rem; }
+
+.loadingWrap .page1 .links .link:nth-child(1) { -webkit-transition-delay: .14s; -o-transition-delay: .14s; transition-delay: .14s; }
+
+.loadingWrap .page1 .links .link:nth-child(2) { -webkit-transition-delay: .1s; -o-transition-delay: .1s; transition-delay: .1s; }
+
+.loadingWrap .page1 .links .link:nth-child(3) { -webkit-transition-delay: .0666666667s; -o-transition-delay: .0666666667s; transition-delay: .0666666667s; }
 
 .loadingWrap .page2 { display: none; }
 
