--- a/src/aodi/css/index.css
+++ b/src/aodi/css/index.css
@@ -1512,7 +1512,7 @@ body { background-color: #dbd9c3; font-family: "Microsoft YaHei"; }
 
 img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 
-.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 10; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
+.video_exist { width: 1.6rem; height: 1.6rem; width: .8rem; height: .8rem; position: absolute; right: .4rem; top: .4rem; z-index: 100; background: url(../images/normalmusic.png) no-repeat; -webkit-background-size: .8rem .8rem; background-size: .8rem .8rem; }
 
 .video_exist2 { display: none; }
 
@@ -1552,6 +1552,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 
 .page1 .page1-00 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/02_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 130%; background-size: auto 130%; }
 
+.page1 .page1-001 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: auto; }
+
+.page1 .page1-001 img { max-width: none; width: auto; height: 100%; -webkit-transform: scale(1.3); -ms-transform: scale(1.3); transform: scale(1.3); -webkit-transform-origin: 0 50%; -ms-transform-origin: 0 50%; transform-origin: 0 50%; }
+
+.page1 .page1-002 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; }
+
 .page1 .page1-04 { position: absolute; top: 40.5%; left: 10.3%; width: 82.8%; }
 
 .page1 .page1-03 { display: none; position: absolute; bottom: 8.1%; left: 50%; width: 15.2%; margin-left: -7.6%; }
@@ -1587,6 +1593,12 @@ img { pointer-events: none; -webkit-user-select: none; -moz-user-select: none; -
 .page1 .page1-06 { position: absolute; top: 11.3%; left: 50%; width: 22.2%; margin-left: -11.1%; opacity: 0; }
 
 .page2 { display: block; opacity: 0; }
+
+.page2 .page2-001 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: auto; }
+
+.page2 .page2-001 img { max-width: none; width: auto; height: 100%; -webkit-transform: scale(1.1); -ms-transform: scale(1.1); transform: scale(1.1); -webkit-transform-origin: 0 50%; -ms-transform-origin: 0 50%; transform-origin: 0 50%; }
+
+.page2 .page2-002 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; overflow: hidden; }
 
 .page2 .page2-01 { position: absolute; top: 0; left: 0; width: 100%; height: 100%; background-image: url(../images/04_bg.jpg); background-repeat: no-repeat; -webkit-background-size: auto 110%; background-size: auto 110%; }
 
